--- a/Shell notebooks.ipynb
+++ b/Shell notebooks.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ff657b5e",
+   "metadata": {},
+   "source": [
+    "### Jupyter notebooks with a bash kernel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07f74692",
+   "metadata": {},
+   "source": [
+    "[Jupyter](https://jupyter.org/) is many things, for historical reasons, but for our current purpose, we need only one of them - the Jupyter notebook.\n",
+    "\n",
+    "```sh\n",
+    "apk search jupyter\n",
+    "doas apk add jupyter-notebook\n",
+    "```\n",
+    "\n",
+    "We want to run shell commands, and for this we need to install the [bash_kernel](https://github.com/takluyver/bash_kernel) (and bash)\n",
+    "\n",
+    "```sh\n",
+    "doas apk add bash\n",
+    "pip install --break-system-packages bash_kernel\n",
+    "python -m bash_kernel.install\n",
+    "```\n",
+    "\n",
+    "Now we can run\n",
+    "\n",
+    "```sh\n",
+    "jupyter notebook\n",
+    "```\n",
+    "\n",
+    "The next cell in this notebook runs a bash command interactively and stores its output within the notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c7c04ce2",
