--- a/git.ipynb
+++ b/git.ipynb
@@ -80,6 +80,7 @@
     "\n",
     "Create a SSH key if needed (`ssh-keygen`), ask to git to use it to sign commits.\n",
     "```sh\n",
+    "doas apk add openssh-keygen\n",
     "git config --global user.signingkey ~/.ssh/id_ed25519.pub\n",
     "git config --global commit.gpgsign true\n",
     "git config --global gpg.format ssh\n",
