--- a/git.ipynb
+++ b/git.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "33f85bfd",
+   "metadata": {},
+   "source": [
+    "# git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ccc5cd41",
    "metadata": {},
    "source": [
-    "### Hello git\n",
+    "### Setup\n",
     "\n",
     "```sh\n",
     "doas apk add git\n",
@@ -86,7 +94,7 @@
     "git config --global gpg.format ssh\n",
     "```\n",
     "\n",
-    "Tell GitHub that we're using it as a [signing key](https://github.com/settings/keys)."
+    "Also tell GitHub that we're using it as a [signing key](https://github.com/settings/keys)."
    ]
   }
  ],
