--- a/shell-notebooks.ipynb
+++ b/shell-notebooks.ipynb
@@ -20,7 +20,7 @@
     "doas apk add jupyter-notebook\n",
     "```\n",
     "\n",
-    "We want to run shell commands, and for this we need to install the [bash_kernel](https://github.com/takluyver/bash_kernel) (and bash)\n",
+    "We want to run shell commands, and for this we need to install the [bash_kernel](https://github.com/takluyver/bash_kernel) (and bash).\n",
     "\n",
     "```sh\n",
     "doas apk add bash\n",
@@ -47,12 +47,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;0mShell notebooks.ipynb\u001b[m\n"
+      "\u001b[0;0mLICENSE\u001b[m                \u001b[0;0mgit.ipynb\u001b[m\n",
+      "\u001b[0;0mREADME.md\u001b[m              \u001b[0;0mshell-notebooks.ipynb\u001b[m\n"
      ]
     }
    ],
    "source": [
     "ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fd597c9",
+   "metadata": {},
+   "source": [
+    "### Conversion to HTML\n",
+    "\n",
+    "```sh\n",
+    "jupyter nbconvert --to html --template classic *.ipynb\n",
+    "```"
    ]
   }
  ],
