--- a/ash.ipynb
+++ b/ash.ipynb
@@ -30,12 +30,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a2e8b07",
+   "cell_type": "markdown",
+   "id": "8adf62df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "> #### Pedigree\n",
+    ">\n",
+    "> ash (almquist shell) came around the time of bash. In 90s it was posted to debian as dash, from which the shell in busybox ([`ash.c`](https://git.busybox.net/busybox/tree/shell)) was forked."
+   ]
   }
  ],
  "metadata": {
