--- a/ash.ipynb
+++ b/ash.ipynb
@@ -38,6 +38,26 @@
     ">\n",
     "> ash (almquist shell) came around the time of bash. In 90s it was posted to debian as dash, from which the shell in busybox ([`ash.c`](https://git.busybox.net/busybox/tree/shell)) was forked."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4dec6f0",
+   "metadata": {},
+   "source": [
+    "## Customizing\n",
+    "\n",
+    "Two step process. First, create a `~/.profile` with \n",
+    "\n",
+    "```sh\n",
+    "export ENV=$HOME/.ashrc ash\n",
+    "```\n",
+    "\n",
+    "Then put the actual customizations in `~/.ashrc`, e.g.\n",
+    "\n",
+    "```sh\n",
+    "export HISTSIZE=9999999\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
