--- a/apk.ipynb
+++ b/apk.ipynb
@@ -9,11 +9,35 @@
     "\n",
     "Alpine packages keeper\n",
     "\n",
-    "#### HTTPS\n",
+    "## Repositories\n",
+    "\n",
+    "3 layers:\n",
+    "\n",
+    "1. `mirror` hosts\n",
+    "2. `release` (collections of snapshots) of\n",
+    "3. `repositories`\n",
+    "\n",
+    "3 repositories\n",
+    "\n",
+    "1. main\n",
+    "2. community\n",
+    "3. testing\n",
+    "\n",
+    "Specified in\n",
     "\n",
     "```sh\n",
-    "emacs /etc/apk/repositories\n",
+    "/etc/apk/repositories\n",
     "```\n",
+    "\n",
+    "Format of entries is `[@type] [url]`, e.g.\n",
+    "```\n",
+    "# comment\n",
+    "https://dl-cdn.alpinelinux.org/alpine/edge/main\n",
+    "/var/apk/my-packages\n",
+    "```\n",
+    "\n",
+    "Public keys of the official Alpine repositories are already included on the system by the `alpine-keys` package.\n",
+    "\n",
     "\n",
     "### Updating repositories indexes\n",
     "\n",
