--- a/xfce.ipynb
+++ b/xfce.ipynb
@@ -54,7 +54,27 @@
     "\n",
     "* **Window manager** (`xfwm4`): Handles the placement of windows on screen, provides window decorations and manages workspaces.\n",
     "\n",
-    "* **Desktop** (`xfdesktop`): Sets the background image and provides a root window menu, desktop icons or minimized icons and a window list."
+    "* **Desktop** (`xfdesktop`): Sets the background image and provides a root window menu, desktop icons or minimized icons and a window list.\n",
+    "\n",
+    "* **Panel** (`xfce4-panel`): Switch between open windows, launch applications, switch workspaces and use menu plugins to browse programs and directories.\n",
+    "\n",
+    "* **Session manager** (`xfce4-session`): Controls login and power management, saves and restores sessions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2be49a3",
+   "metadata": {},
+   "source": [
+    "### Session manager `xfce4-session`\n",
+    "\n",
+    "`man xfce4-session`\n",
+    "\n",
+    "> The xfce4-session program starts up the Xfce Desktop Environment and is typically executed by your login manager (e.g. xdm, gdm, kdm, wdm or from your X startup scripts). It will load your last session or a default session that includes the standard Xfce programs if no saved session is available.\n",
+    ">\n",
+    "> xfce4-session is a standard X11R6 session manager than can manage any X11R6 session manager compliant program, including gnome and KDE programs.\n",
+    ">\n",
+    "> xfce4-session uses the contents of the `~/.cache/sessions` directory for starting previously saved sessions."
    ]
   }
  ],
