--- a/xfce.ipynb
+++ b/xfce.ipynb
@@ -76,6 +76,140 @@
     ">\n",
     "> xfce4-session uses the contents of the `~/.cache/sessions` directory for starting previously saved sessions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d0d81fee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;34mthumbs-localhost:0\u001b[m\n",
+      "\u001b[0;0mxfce4-session-localhost:0\u001b[m\n",
+      "\u001b[0;0mxfwm4-26b706f01-8fc9-4136-a5de-c7a189e18e56.state\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ~/.cache/sessions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c8d5edbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;0mDefault.png\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls ~/.cache/sessions/thumbs*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddf2ccf1",
+   "metadata": {},
+   "source": [
+    "`Default.png` is a small 256x160px screenshot of the desktop and running applications (seems stale, perhaps at the point the session was saved).\n",
+    "\n",
+    "`xfce4-session-localhost:0`, where presumably `:0` stands for the X display number, is a text file containing an entry for all the running programs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "af7de0d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Session: Default]\n",
+      "Client0_ClientId=26b706f01-8fc9-4136-a5de-c7a189e18e56\n",
+      "Client0_Hostname=unix/localhost\n",
+      "Client0_CloneCommand=xfwm4,\n",
+      "Client0_DiscardCommand=rm,-rf,/home/m/.cache/sessions/xfwm4-26b706f01-8fc9-4136-a5de-c7a189e18e56.state,\n",
+      "Client0_RestartCommand=xfwm4,--display,:0.0,--sm-client-id,26b706f01-8fc9-4136-a5de-c7a189e18e56,\n",
+      "Client0_CurrentDirectory=/home/m\n",
+      "Client0_Program=xfwm4\n",
+      "...\n",
+      "Client6_DesktopFile=/usr/share/applications/xfce4-terminal.desktop\n",
+      "Client6_Program=xfce4-terminal\n",
+      "Client6_UserId=m\n",
+      "Client6_Priority=50\n",
+      "Client6_RestartStyleHint=0\n",
+      "Count=7\n",
+      "LegacyCount=0\n",
+      "Screen0_ActiveWorkspace=0\n",
+      "LastAccess=1748618509\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat ~/.cache/sessions/xfce4-session-localhost:0 | awk 'NR < 9 || NR > 63 { print }; NR == 63 { print \"...\" }'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dde1595",
+   "metadata": {},
+   "source": [
+    "Similarly, but differently, the `xfwm4-<uuid>.state` file is a text file containing details about all open windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c63792c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CLIENT] 0x800003\n",
+      "  [CLIENT_ID] 2cab7566f-86f4-426d-82c3-8edfc5ee80d9\n",
+      "  [CLIENT_LEADER] 0x800001\n",
+      "  [WINDOW_ROLE] xfce4-terminal-1748614300-1539522888\n",
+      "  [RES_NAME] xfce4-terminal\n",
+      "  [RES_CLASS] Xfce4-terminal\n",
+      "  [WM_NAME] Terminal\n",
+      "  [WM_COMMAND] (1) \"xfce4-terminal\"\n",
+      "  [GEOMETRY] (127,91,817,483)\n",
+      "  [GEOMETRY-MAXIMIZED] (127,91,817,483)\n",
+      "  [SCREEN] 0\n",
+      "  [DESK] 0\n",
+      "  [FLAGS] 0x0\n",
+      "[CLIENT] 0x800216\n",
+      "  [CLIENT_ID] 2cab7566f-86f4-426d-82c3-8edfc5ee80d9\n",
+      "  [CLIENT_LEADER] 0x800001\n",
+      "  [WINDOW_ROLE] xfce4-terminal-1748614362-2333586391\n",
+      "  [RES_NAME] xfce4-terminal\n",
+      "  [RES_CLASS] Xfce4-terminal\n",
+      "  [WM_NAME] Terminal - \n",
+      "  [WM_COMMAND] (1) \"xfce4-terminal\"\n",
+      "  [GEOMETRY] (618,412,817,483)\n",
+      "  [GEOMETRY-MAXIMIZED] (618,412,817,483)\n",
+      "  [SCREEN] 0\n",
+      "  [DESK] 0\n",
+      "  [FLAGS] 0x10000\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat ~/.cache/sessions/xfwm4-*.state"
+   ]
   }
  ],
  "metadata": {
