--- a/xfce.ipynb
+++ b/xfce.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Desktop environment\n",
     "\n",
-    "* [xfce.org](https://xfce.org/)"
+    "* https://xfce.org/"
    ]
   },
   {
@@ -54,7 +54,7 @@
     "\n",
     "* **Window manager** (`xfwm4`): Handles the placement of windows on screen, provides window decorations and manages workspaces.\n",
     "\n",
-    "* **Desktop** (`xfdesktop`): Sets the background image and provides a root window menu, desktop icons or minimized icons and a window list.\n",
+    "* **Desktop manager** (`xfdesktop`): Sets the background image and provides a root window menu, desktop icons or minimized icons and a window list.\n",
     "\n",
     "* **Panel** (`xfce4-panel`): Switch between open windows, launch applications, switch workspaces and use menu plugins to browse programs and directories.\n",
     "\n",
@@ -209,6 +209,30 @@
    ],
    "source": [
     "cat ~/.cache/sessions/xfwm4-*.state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f94dfa0a",
+   "metadata": {},
+   "source": [
+    "More details about xfce4-session are available in the Xfce online manuals:\n",
+    "\n",
+    "* https://docs.xfce.org/xfce/xfce4-session\n",
+    "\n",
+    "> Xfce4-session is a session manager for Xfce. Its task is to save the state of your desktop (opened applications and their location) and restore it during a next startup. You can create several different sessions and choose one of them on startup."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15594472",
+   "metadata": {},
+   "source": [
+    "## Tips\n",
+    "\n",
+    "From https://docs.xfce.org/xfce/getting-started:\n",
+    "\n",
+    "> Shading (and unshading) a window, or rolling it up to hide its contents and only show the title bar, can be done by scrolling the mouse wheel when hovering over the title bar."
    ]
   }
  ],
