--- a/xfce.ipynb
+++ b/xfce.ipynb
@@ -232,7 +232,60 @@
     "\n",
     "From https://docs.xfce.org/xfce/getting-started:\n",
     "\n",
+    "> The Xfce panel can be used to access programs by means of _launchers_, these program launchers are displayed as icons on the panel to launch the specified program. The _Applications Menu_ item on the panel also contains all installed programs.\n",
+    "\n",
+    "> _Application Finder_ (`Alt-F2` or chose \"Run Program...\" from the Application or Desktop Menu) can be used to launch programs by name.\n",
+    "\n",
     "> Shading (and unshading) a window, or rolling it up to hide its contents and only show the title bar, can be done by scrolling the mouse wheel when hovering over the title bar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbf26246",
+   "metadata": {},
+   "source": [
+    "## Display Manager\n",
+    "\n",
+    "Who starts Xfce?\n",
+    "\n",
+    "> ### Running Xfce\n",
+    ">\n",
+    "> #### Display managers\n",
+    ">\n",
+    "> `xfce4-session` installs a file that should add an option for display managers to run an Xfce session. Xfce does not have its own DM.\n",
+    ">\n",
+    "> #### Commandline\n",
+    ">\n",
+    "> `startxfce4`\n",
+    "\n",
+    "In the case of alpine when using `setup-desktop` with the xfce option, the display manager is [lightdm](lightdm.html).\n",
+    "\n",
+    "Lightdm then would start xfce4-session, which would in turn\n",
+    "\n",
+    "> When you start the Xfce session for the first time, several programs are started by the Xfce session manager.\n",
+    ">\n",
+    "> * Panel\n",
+    "> * Desktop Manager\n",
+    "> * Window Manager \n",
+    "> * Settings Manager.\n",
+    ">\n",
+    "> The Xfce session manager manages the startup of applications, and also allows you to save your session when you quit Xfce, so that the next time you log in, the same programs are started for you automatically.\n",
+    "\n",
+    "We can see this in the following (ellided) output of `pstree`\n",
+    "\n",
+    "```\n",
+    "init-+...                                                                       \n",
+    "     |-elogind-daemon                                                           \n",
+    "     |-7*[getty]                                                                \n",
+    "     |-supervise-daem--lightdm-+-Xorg---{InputThread}                           \n",
+    "                               |-lightdm-+-xfce4-session-+-Thunar               \n",
+    "                                                         |-xfce4-panel          \n",
+    "                                                         |-xfce4-power-man      \n",
+    "                                                         |-xfce4-screensav      \n",
+    "                                                         |-xfce4-terminal       \n",
+    "                                                         |-xfdesktop            \n",
+    "                                                         |-xfsettingsd \n",
+    "```"
    ]
   }
  ],
