--- a/docs.ipynb
+++ b/docs.ipynb
@@ -33,6 +33,10 @@
     "\n",
     "* https://pubs.opengroup.org/onlinepubs/9799919799/\n",
     "\n",
+    "Here is an index of shell commands:\n",
+    "\n",
+    "* https://pubs.opengroup.org/onlinepubs/9699919799/utilities/\n",
+    "\n",
     "For example, here is\n",
     "\n",
     "* [man awk](https://pubs.opengroup.org/onlinepubs/9699919799/utilities/awk.html)\n"
