--- a/xfce.ipynb
+++ b/xfce.ipynb
@@ -9,7 +9,8 @@
     "\n",
     "Desktop environment\n",
     "\n",
-    "* https://xfce.org/"
+    "* https://xfce.org/\n",
+    "* https://docs.xfce.org/xfce/getting-started"
    ]
   },
   {
@@ -17,7 +18,7 @@
    "execution_count": 1,
    "id": "5c35bd6d",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -42,7 +43,7 @@
    "id": "5c3107de",
    "metadata": {},
    "source": [
-    "### Components\n",
+    "## Components\n",
     "\n",
     "In the UNIX-small-tools spirit, the \"Xfce desktop environment\" is a collection of programs that provides a full-featured desktop environment.\n",
     "\n",
@@ -66,7 +67,7 @@
    "id": "b2be49a3",
    "metadata": {},
    "source": [
-    "### Session manager `xfce4-session`\n",
+    "## Session manager `xfce4-session`\n",
     "\n",
     "`man xfce4-session`\n",
     "\n",
@@ -225,16 +226,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15594472",
+   "id": "06c90e15",
    "metadata": {},
    "source": [
-    "## Tips\n",
+    "## Window manager\n",
     "\n",
-    "From https://docs.xfce.org/xfce/getting-started:\n",
-    "\n",
-    "> The Xfce panel can be used to access programs by means of _launchers_, these program launchers are displayed as icons on the panel to launch the specified program. The _Applications Menu_ item on the panel also contains all installed programs.\n",
-    "\n",
-    "> _Application Finder_ (`Alt-F2` or chose \"Run Program...\" from the Application or Desktop Menu) can be used to launch programs by name.\n",
+    "### Tips\n",
     "\n",
     "> Shading (and unshading) a window, or rolling it up to hide its contents and only show the title bar, can be done by scrolling the mouse wheel when hovering over the title bar."
    ]
@@ -265,9 +262,9 @@
     "> When you start the Xfce session for the first time, several programs are started by the Xfce session manager.\n",
     ">\n",
     "> * Panel\n",
-    "> * Desktop Manager\n",
-    "> * Window Manager \n",
-    "> * Settings Manager.\n",
+    "> * Desktop manager\n",
+    "> * Window manager \n",
+    "> * Settings manager.\n",
     ">\n",
     "> The Xfce session manager manages the startup of applications, and also allows you to save your session when you quit Xfce, so that the next time you log in, the same programs are started for you automatically.\n",
     "\n",
@@ -287,6 +284,73 @@
     "                                                         |-xfsettingsd \n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6af4e65",
+   "metadata": {},
+   "source": [
+    "## Components II\n",
+    "\n",
+    "* **Settings manager** (`xfce4-settings`): A pseudo component which is made up of a daemon, manager and editor to centralize the configuration management.\n",
+    "\n",
+    "* **Application finder** (`xfce4-appfinder`): `Alt-F2` to launch applications.\n",
+    "\n",
+    "* **Thunar** (`thunar`): File manager."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15594472",
+   "metadata": {},
+   "source": [
+    "## Application finder `xfce4-appfinder`\n",
+    "\n",
+    "> The Xfce panel can be used to access programs by means of _launchers_, these program launchers are displayed as icons on the panel to launch the specified program. The _Applications Menu_ item on the panel also contains all installed programs.\n",
+    "\n",
+    "> _Application finder_ (`Alt-F2` or chose \"Run Program...\" from the Application or Desktop Menu) can be used to launch programs by name.\n",
+    "\n",
+    "By default, the `xfce4-session` will start an instance of `xfce4-appfinder` (as a child of `xfsettingsd` and keep it running in the background for fast access, reusing it for invocations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04c3a14b",
+   "metadata": {},
+   "source": [
+    "## Thunar\n",
+    "\n",
+    "File manager, named after the German god of Thunder (who appears to be the same entity as the perhaps better known Norse god Thor).\n",
+    "\n",
+    "`thunar` without arguments does the same thing as `xdg-open .`, opening the current folder in the file manager."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9228f31c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lrwxrwxrwx    1 root     root           6 May 17 17:01 \u001b[1;36m/usr/bin/Thunar\u001b[m -> \u001b[1;32mthunar\u001b[m\n",
+      "-rwxr-xr-x    1 root     root      777.9K Jul 31  2024 \u001b[1;32m/usr/bin/thunar\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls -lh `which thunar` `which Thunar`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0b2d1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
