--- a/apk.ipynb
+++ b/apk.ipynb
@@ -43,6 +43,14 @@
     "\n",
     "```sh\n",
     "apk update\n",
+    "```\n",
+    "\n",
+    "### World\n",
+    "\n",
+    "List of all installed packages:\n",
+    "\n",
+    "```sh\n",
+    "cat /etc/apk/world\n",
     "```"
    ]
   }
