--- a/docs.ipynb
+++ b/docs.ipynb
@@ -19,7 +19,9 @@
     "\n",
     "```\n",
     "doas apk add docs\n",
-    "```"
+    "```\n",
+    "\n",
+    "The `docs` special package installs docs for both already installed packages and future ones automatically."
    ]
   },
   {
@@ -31,15 +33,20 @@
     "\n",
     "Busybox itself has a man page (`man busybox`) which only has a terse overview of the utilities. For more detailed documentation, the opengroup specs are handy (busybox tries to, but does not guarantee, POSIX conformance).\n",
     "\n",
-    "* https://pubs.opengroup.org/onlinepubs/9799919799/\n",
+    "* Top level: https://pubs.opengroup.org/onlinepubs/9799919799/\n",
+    "* Index of shell commands:  https://pubs.opengroup.org/onlinepubs/9699919799/utilities/\n",
+    "* Man page for awk: https://pubs.opengroup.org/onlinepubs/9699919799/utilities/awk.html\n",
     "\n",
-    "Here is an index of shell commands:\n",
+    "### POSIX man pages\n",
     "\n",
-    "* https://pubs.opengroup.org/onlinepubs/9699919799/utilities/\n",
+    "But hey, there is a better way!\n",
     "\n",
-    "For example, here is\n",
-    "\n",
-    "* [man awk](https://pubs.opengroup.org/onlinepubs/9699919799/utilities/awk.html)\n"
+    "```\n",
+    "doas apk add man-pages-posix\n",
+    "man awk\n",
+    "???\n",
+    "profit!\n",
+    "```"
    ]
   }
  ],
