--- a/git.ipynb
+++ b/git.ipynb
@@ -76,7 +76,17 @@
     "git config --global credential.helper /usr/libexec/git-core/git-credential-libsecret\n",
     "```\n",
     "\n",
-    "Create the [PAT](https://github.com/settings/personal-access-tokens/new), and [perform any operation](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#using-a-personal-access-token-on-the-command-line) that requires authentication so that git asks for credentials and uses libsecret to store them."
+    "Create the [PAT](https://github.com/settings/personal-access-tokens/new), and [perform any operation](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#using-a-personal-access-token-on-the-command-line) that requires authentication so that git asks for credentials and uses libsecret to store them.\n",
+    "\n",
+    "> Note: If libsecret is not present (or not desired), then git's built in \"store\" credential helper can store the credentials in a plaintext file in your home directory. Before freaking out, remember that that's the same level of security as your ssh key (now you can freak out).\n",
+    "\n",
+    "### Resetting credentials\n",
+    "\n",
+    "```sh\n",
+    "echo \"url=https://github.com\" | git credential reject\n",
+    "```\n",
+    "\n",
+    "The next time you try to push, it'll ask for the new PAT."
    ]
   },
   {
