--- a/uefi.ipynb
+++ b/uefi.ipynb
@@ -19,6 +19,24 @@
     "\n",
     "The user's choice and other settings can be persisted into NVRAM (non-volatile storage). How these \"UEFI vars\" are saved is up to the implementation (e.g. qemu can save them to a JSON file by using `-device uefi-vars-sysbus,jsonfile=uefi.json`). The OS can also access these, e.g. using the `efivars` utility (which delegates to `/sys/firmware/efi/efivars/`)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45835441",
+   "metadata": {},
+   "source": [
+    "### Shell\n",
+    "\n",
+    "If you find yourself in the UEFI shell, things are not going well. Calm down, you haven't been eaten by a grue (yet).\n",
+    "\n",
+    "`help` will give you help, but it will scroll out and there isn't a scroll bar. Calm down.\n",
+    "\n",
+    "`help -b` will paginate.\n",
+    "\n",
+    "`bcfg boot dump` will print something, which might or might not help.\n",
+    "\n",
+    "You head out of the room by typing `exit`. You find yourself in a new, more welcoming cavern, lined with menu items and other niceities. Maybe the princess is in this castle."
+   ]
   }
  ],
  "metadata": {
