--- a/lightdm.ipynb
+++ b/lightdm.ipynb
@@ -89,6 +89,155 @@
     "* The greeter is LightDM GTK+\n",
     "* The session process that LightDM will run once authentication completes is xfce4-session."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71251e31",
+   "metadata": {},
+   "source": [
+    "## Configuration\n",
+    "\n",
+    "Per the docs, this is the order in which config is read.\n",
+    "```\n",
+    "/usr/share/lightdm/lightdm.conf.d/*.conf\n",
+    "/etc/lightdm/lightdm.conf.d/*.conf\n",
+    "/etc/lightdm/lightdm.conf\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6fb5b4a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "find: /usr/share/lightdm/lightdm.conf.d: No such file or directory\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
+   "source": [
+    "find /usr/share/lightdm/lightdm.conf.d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c67941b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "find: /etc/lightdm/lightdm.conf.d: No such file or directory\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
+   "source": [
+    "find /etc/lightdm/lightdm.conf.d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c4e8e906",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "163 /etc/lightdm/lightdm.conf\n"
+     ]
+    }
+   ],
+   "source": [
+    "wc -l /etc/lightdm/lightdm.conf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6953f97c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;0mkeys.conf\u001b[m                 \u001b[0;0mlightdm.conf\u001b[m\n",
+      "\u001b[0;0mlightdm-gtk-greeter.conf\u001b[m  \u001b[0;0musers.conf\u001b[m\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls /etc/lightdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "67f390f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[keyring]\n",
+      "[greeter]\n",
+      "[LightDM]\n",
+      "\n",
+      "[Seat:*]\n",
+      "\n",
+      "[XDMCPServer]\n",
+      "\n",
+      "[VNCServer]\n",
+      "[UserList]\n",
+      "minimum-uid=500\n",
+      "hidden-users=nobody nobody4 noaccess\n",
+      "hidden-shells=/bin/false /usr/sbin/nologin /sbin/nologin\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat /etc/lightdm/*.conf | grep -v '^#'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74abebc7",
+   "metadata": {},
+   "source": [
+    "So looks like everything is at the defaults. From the docs\n",
+    "\n",
+    "> For example, if a sysadmin wanted to override the system configured default session they should make a file `/etc/lightdm/lightdm.conf.d/50-myconfig.conf`\n",
+    ">\n",
+    "> ```\n",
+    "> [Seat:*]\n",
+    "> user-session=mysession\n",
+    "> ```\n",
+    ">\n",
+    "> Configuration is in keyfile format. For most installations you will want to change the keys in the `[Seat:*]` section as this applies to all seats on the system (normally just one).\n",
+    "\n",
+    "\"Seat\" is an archaic term (but who knows, maybe we'll return to that style of computing in the future) when the computer occupied a room, and there were multiple seats in the room, each with a keyboard, mouse and a TTY. Currently we usually have a single \"seat\" (keyboard, mouse and display combination), but multiple TTYs (both \"real\" ones, the gettys launched by init on system startup, and \"pseudo\" ones, one for each terminal emulator (<a href=\"xterm.html\">xfce4-terminal</a>. Simulacra and Simulation)."
+   ]
   }
  ],
  "metadata": {
