--- a/lightdm.ipynb
+++ b/lightdm.ipynb
@@ -236,8 +236,77 @@
     ">\n",
     "> Configuration is in keyfile format. For most installations you will want to change the keys in the `[Seat:*]` section as this applies to all seats on the system (normally just one).\n",
     "\n",
-    "\"Seat\" is an archaic term (but who knows, maybe we'll return to that style of computing in the future) when the computer occupied a room, and there were multiple seats in the room, each with a keyboard, mouse and a TTY. Currently we usually have a single \"seat\" (keyboard, mouse and display combination), but multiple TTYs (both \"real\" ones, the gettys launched by init on system startup, and \"pseudo\" ones, one for each terminal emulator (<a href=\"xterm.html\">xfce4-terminal</a>. Simulacra and Simulation)."
+    "\"Seat\" is an archaic term (but who knows, maybe we'll return to that style of computing in the future) when the computer occupied a room, and there were multiple seats in the room, each with a keyboard, mouse and a TTY. Currently we usually have a single \"seat\" (keyboard, mouse and display combination), but multiple TTYs (both \"real\" ones, the gettys launched by init on system startup, and \"pseudo\" ones, one for each terminal emulator ([xfce4-terminal](xterm.html). Simulacra and Simulation)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b502e89e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root      2494     1  0 08:47 tty1     00:00:00 /sbin/getty 38400 tty1\n",
+      "root      2495     1  0 08:47 tty2     00:00:00 /sbin/getty 38400 tty2\n",
+      "root      2497     1  0 08:47 tty3     00:00:00 /sbin/getty 38400 tty3\n",
+      "root      2498     1  0 08:47 tty4     00:00:00 /sbin/getty 38400 tty4\n",
+      "root      2502     1  0 08:47 tty5     00:00:00 /sbin/getty 38400 tty5\n",
+      "root      2503     1  0 08:47 tty6     00:00:00 /sbin/getty 38400 tty6\n",
+      "root      2504     1  0 08:47 ?        00:00:00 /sbin/getty -L 0 ttyAMA0 vt100\n"
+     ]
+    }
+   ],
+   "source": [
+    "ps -ef | grep '[g]etty'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b465d9cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SESSION_MANAGER=local/localhost:@/tmp/.ICE-unix/2597,unix/localhost:/tmp/.ICE-unix/2597\n",
+      "XDG_CONFIG_DIRS=/etc/xdg\n",
+      "XDG_SESSION_PATH=/org/freedesktop/DisplayManager/Session0\n",
+      "XDG_MENU_PREFIX=xfce-\n",
+      "XDG_CONFIG_HOME=/home/m/.config\n",
+      "DESKTOP_SESSION=xfce\n",
+      "XDG_SEAT=seat0\n",
+      "XDG_SESSION_DESKTOP=xfce\n",
+      "XDG_SESSION_TYPE=x11\n",
+      "XDG_GREETER_DATA_DIR=/var/lib/lightdm-data/m\n",
+      "XDG_CURRENT_DESKTOP=XFCE\n",
+      "XDG_SEAT_PATH=/org/freedesktop/DisplayManager/Seat0\n",
+      "XDG_CACHE_HOME=/home/m/.cache\n",
+      "XDG_SESSION_CLASS=user\n",
+      "XDG_VTNR=7\n",
+      "XDG_SESSION_ID=c2\n",
+      "XDG_RUNTIME_DIR=/run/user/1000\n",
+      "XDG_DATA_DIRS=/usr/local/share:/usr/share\n",
+      "GDMSESSION=xfce\n",
+      "DBUS_SESSION_BUS_ADDRESS=unix:path=/tmp/dbus-A9Byg2xw50,guid=c86b4088f03c6cfcadd70ce76844fbf6\n"
+     ]
+    }
+   ],
+   "source": [
+    "env | grep -e 'XDG' -e 'SESSION' -e 'DESKTOP'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19eb6839",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
