--- a/xterm.ipynb
+++ b/xterm.ipynb
@@ -11,12 +11,7 @@
     "\n",
     "> `xterm` is the OG X terminal emulator. Here we talk of the terminal emulator provided by the Xfce desktop environment, currently named `xfce4-terminal`.\n",
     "\n",
-    "## Terminal emulators\n",
-    "\n",
-    "Long and interesting reads about what and why\n",
-    "\n",
-    "* The TTY demystified - https://www.linusakesson.net/programming/tty/\n",
-    "* TTY: under the hood - https://www.yabage.me/2016/07/08/tty-under-the-hood/\n",
+    "* More about terminal emulators: [tty](tty.html)\n",
     "\n",
     "## Keyboard shortcuts\n",
     "\n",
