--- a/apk.ipynb
+++ b/apk.ipynb
@@ -51,7 +51,11 @@
     "\n",
     "```sh\n",
     "cat /etc/apk/world\n",
-    "```"
+    "```\n",
+    "\n",
+    "From Alpine docs (https://docs.alpinelinux.org/user-handbook/0.1a/Working/apk.html#_world):\n",
+    "\n",
+    "> The packages you want to have explicitly installed are listed in the \"world file\" available in `/etc/apk/world`. It is safe to edit by hand. If you've edited it by hand, you may run `apk add` with no arguments to bring the package selection to a consistent state."
    ]
   }
  ],
