--- a/install.ipynb
+++ b/install.ipynb
@@ -32,6 +32,65 @@
     "emacs /etc/apk/repositories\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c40459a",
+   "metadata": {},
+   "source": [
+    "## setup-*\n",
+    "\n",
+    "Simple shells scripts located in `/usr/sbin`.\n",
+    "\n",
+    "* https://wiki.alpinelinux.org/wiki/Alpine_setup_scripts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1962981c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "setup-acf\n",
+      "setup-alpine\n",
+      "setup-apkcache\n",
+      "setup-apkrepos\n",
+      "setup-bootable\n",
+      "setup-desktop\n",
+      "setup-devd\n",
+      "setup-disk\n",
+      "setup-dns\n",
+      "setup-hostname\n",
+      "setup-interfaces\n",
+      "setup-keymap\n",
+      "setup-lbu\n",
+      "setup-mta\n",
+      "setup-ntp\n",
+      "setup-proxy\n",
+      "setup-sshd\n",
+      "setup-timezone\n",
+      "setup-user\n",
+      "setup-wayland-base\n",
+      "setup-xen-dom0\n",
+      "setup-xorg-base\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls /usr/sbin | grep setup-"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bf423cd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
